--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 <div id="mapholder"></div>
 <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<script src="client.js"></script>
 <script>
 var x=document.getElementById("demo");
 function getLocation()
@@ -33,7 +34,9 @@ function getLocation()
 function showPosition(position){
   lat = position.coords.latitude;
   lon = position.coords.longitude;
-  latlon = new google.maps.LatLng(lat, lon)
+  latlon = new google.maps.LatLng(lat, lon);
+  joinRoom("hello");
+  updateLocation([lat, lon]);
   mapholder = document.getElementById('mapholder')
   mapholder.style.height='250px';
   mapholder.style.width='500px';
