--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@ function showPosition(position){
   var map=new google.maps.Map(document.getElementById("mapholder"),myOptions);
   var marker=new google.maps.Marker({position:latlon,map:map,title:"You are here!"});
 }
+setInterval(placeMarkers(markers, map), 10000)
 </script>
 </body>
 </html>
