--- a/index.html
+++ b/index.html
@@ -16,27 +16,27 @@
     <a><input type="submit" onclick = "getLocation()" value= "Find Your Friends!"  class="button"></a>
 </form> -->
 
-<button class = "location" onclick = "getLocation()">Find your Friends!</button>
+<button class = "location" onclick = "var locate=setInterval(function(){getLocation()}, 100)">Find your Friends!</button>
 
 <div id="mapholder"></div>
 <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
 <script src="client.js"></script>
 <script>
+var map;
 var x=document.getElementById("demo");
 function getLocation()
   {
   if (navigator.geolocation)
     {
-    navigator.geolocation.watchPosition(showPosition);
+    navigator.geolocation.getCurrentPosition(showPosition);
     }
   else{x.innerHTML="Geolocation is not supported by this browser.";}
   }
 function showPosition(position){
   lat = position.coords.latitude;
   lon = position.coords.longitude;
+  console.log('test');
   latlon = new google.maps.LatLng(lat, lon);
-  joinRoom("hello");
-  updateLocation([lat, lon]);
   mapholder = document.getElementById('mapholder')
   mapholder.style.height='250px';
   mapholder.style.width='500px';
@@ -47,10 +47,13 @@ function showPosition(position){
   mapTypeControl: true,
   navigationControlOptions:{style: google.maps.NavigationControlStyle.SMALL}
   };
-  var map=new google.maps.Map(document.getElementById("mapholder"),myOptions);
+  if (map == undefined){
+    joinRoom("hello");
+    map=new google.maps.Map(document.getElementById("mapholder"),myOptions);
+  }
+  updateLocation([lat, lon]);
   var marker=new google.maps.Marker({position:latlon , map:map , title:"You are here!"});
 }
-setInterval(placeMarkers(markers, map), 10000)
 </script>
 </body>
 </html>
