--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <a><input type="submit" onclick = "getLocation()" value= "Find Your Friends!"  class="button"></a>
 </form> -->
 
-<button class = "location" onclick = "var locate=setInterval(function(){getLocation()}, 100)">Find your Friends!</button>
+<button class = "location" onclick = "var locate=setInterval(function(){getLocation()}, 500)">Find your Friends!</button>
 
 <div id="mapholder"></div>
 <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
@@ -28,14 +28,13 @@ function getLocation()
   {
   if (navigator.geolocation)
     {
-    navigator.geolocation.getCurrentPosition(showPosition);
+    navigator.geolocation.watchPosition(showPosition, undefined ,{enableHighAccuracy: true});
     }
   else{x.innerHTML="Geolocation is not supported by this browser.";}
   }
 function showPosition(position){
   lat = position.coords.latitude;
   lon = position.coords.longitude;
-  console.log('test');
   latlon = new google.maps.LatLng(lat, lon);
   mapholder = document.getElementById('mapholder')
   mapholder.style.height='250px';
@@ -52,7 +51,6 @@ function showPosition(position){
     map=new google.maps.Map(document.getElementById("mapholder"),myOptions);
   }
   updateLocation([lat, lon]);
-  var marker=new google.maps.Marker({position:latlon , map:map , title:"You are here!"});
 }
 </script>
 </body>
