--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
 <script src = "http://maps.google.com/maps/api/js?sensor=false"></script>
 <script src = "client.js"></script>
 <script>
+var room_id=getQueryStrings()['room_id']
+if (room_id != undefined){
+  joinRoom(room_id.substring(0, room_id.length-1));
+  setInterval(function(){getLocation()}, 500);
+  document.getElementByclass("location").style.visibility="hidden";
+}
 var map;
 var x = document.getElementById("demo");
 function getLocation()
