--- a/index.html
+++ b/index.html
@@ -15,25 +15,20 @@
     <div id = "linkcontainer">
 
     </div>
-    
-  <p id="demo">Click the button to find your friends:</p>
+  <div id="default"> <!-- What is shown if there is no room_id -->
+    <p id="demo">Click the button to find your friends:</p>
 
-<!--<form method="post" >
-    <a><input type="submit" onclick = "getLocation()" value= "Find Your Friends!"  class="button"></a>
-</form> -->
+    <!--<form method="post" >
+      <a><input type="submit" onclick = "getLocation()" value= "Find Your Friends!"  class="button"></a>
+    </form> -->
 
-<button class = "location" onclick = "joinRoom(); var locate = setInterval(function(){getLocation()}, 500)"><span>Create!</span></button>
+    <button class = "location" onclick = "joinRoom(); var locate = setInterval(function(){getLocation()}, 500)"><span>Create!</span></button>
+  </div>
 
 
 <script src = "http://maps.google.com/maps/api/js?sensor=false"></script>
 <script src = "client.js"></script>
 <script>
-var room_id=getQueryStrings()['room_id']
-if (room_id != undefined){
-  joinRoom(room_id.substring(0, room_id.length-1));
-  setInterval(function(){getLocation()}, 500);
-  document.getElementByclass("location").style.visibility="hidden";
-}
 var map;
 var x = document.getElementById("demo");
 function getLocation()
