--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <div id = "linkcontainer">
 
     </div>
+    <div id = "headingcontainer">
+    </div>
   <div id="default"> <!-- What is shown if there is no room_id -->
     <p id="demo">Click the button to find your friends:</p>
 
