--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </div>
 
 
-<script src = "http://maps.google.com/maps/api/js?sensor=false"></script>
+<script src = "http://maps.google.com/maps/api/js?libraries=geometry&sensor=false"></script>
 <script src = "client.js"></script>
 <script>
 var map;
@@ -48,9 +48,8 @@ function showPosition(position){
   lon = position.coords.longitude;
   latlon = new google.maps.LatLng(lat, lon);
   mapholder = document.getElementById('mapholder')
-  mapholder.style.height = window.innerHeight-document.getElementById("mytable").offsetHeight-10+"px";
+  mapholder.style.height = window.innerHeight-document.getElementById("mytable").offsetHeight+"px";
   mapholder.style.width = window.innerWidth;
-
   var myOptions = {
   center: latlon,zoom:14,
   mapTypeId: google.maps.MapTypeId.ROADMAP,
