--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 <script src = "http://maps.google.com/maps/api/js?libraries=geometry&sensor=false"></script>
 <script src = "client.js"></script>
 <script>
+
+
+
 var map;
 var x = document.getElementById("demo");
 function getLocation()
@@ -64,6 +67,7 @@ function showPosition(position){
 </script>
 </div>
 <div id="mapholder"></div>
+<img id= 'compass' width = "80" src = 'compass.png'></img>
 </div>
 </body>
 </html>
